# mcp-weather

./: README.md  pyproject.toml
src/mcp_weather/: __init__.py  weather.py
